# myclib

./: Makefile.am  README  bundle.sh  configure.ac
jni/: JNITest.java  Makefile.am  myclib.i  run-test.sh.in
src/: Makefile.am  main.c  myclib.h  sum.c  sum.h
