AC_INIT([myclib-hello], [1.0])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AM_PROG_AR
LT_INIT([disable-static])
AC_OUTPUT(Makefile src/Makefile)
AC_CONFIG_MACRO_DIRS([m4])

AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([config.h])

AC_PROG_CC

AC_HEADER_STDC
AC_CHECK_HEADERS([stdio.h math.h])

AC_OUTPUT
